# modbus-simulator

./: .dockerignore  .editorconfig  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  README_CN.md  README_EN.md  docker-compose.yml  mypy.ini  pyproject.toml  render.yml  requirements.txt
src/: __init__.py  main.py
src/core/: __init__.py  config.py  logger.py
src/modbus/: __init__.py  modbus_cache.py  modbus_data_generator.py  modbus_simulator.py
src/web/: __init__.py  modbus_client.py  routes.py  tasks.py  web_monitor.py  websocket_manager.py
static/css/: style.css
static/js/: app.js
templates/: index.html
